<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PossibleFriends"
    tools:context=".PossibleFriends">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#818080">

        <TextView
...
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_friends"
            android:layout_centerInParent="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/top_bar_messages"
            android:backgroundTint="#FF3A3A3A"
            android:text="My Friends" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:id="@+id/top_bar_messages"
            android:contentDescription="Messages"
...
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"/>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerview2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/recyclerview"/>-->

    <RelativeLayout
        android:id="@+id/navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
...
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3A3A3A"
            app:icon="@drawable/home" />

        <Button
            android:id="@+id/navigation_friends"
            android:contentDescription="Friends"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_home"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/friends" />

...
