<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_message"
        android:backgroundTint="#FF3A3A3A"
        android:padding="8dp"
        android:layout_marginEnd="80dp"
        android:id="@+id/left_chat_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:id="@+id/left_chat_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_message"
        android:backgroundTint="#000000"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:id="@+id/right_chat_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:id="@+id/right_chat_text"
            />

    </LinearLayout>



</RelativeLayout>